--- a/lesson7/lazyloading.html
+++ b/lesson7/lazyloading.html
@@ -2,28 +2,33 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Assignment portal for Nikkolet Ashby in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
-    <title>Nikkolet Ashby - Assignments Portal</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Lazy Loading Assignment for Zach Robker in WDD 230: Web Frontend 
+    Development at Brigham Young University - Idaho">
+    <title>WDD 230 Lazy Loading Assignment|Zach Robker</title>
     <link rel="stylesheet" href="css/lazyloading.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="images/2897341_future_portal_technology_teleport_warp_icon.png">
+    <script src="js/lazyloading.js" defer></script>
 </head>
 
 <body>
-    <main>
-        <h1>Progressive Loading (Images)</h1>
-        <picture><img src="https://picsum.photos/300/400" alt="img"></picture>
-        <picture><img src="https://picsum.photos/300/400" alt="img"></picture>
-        <picture><img src="https://picsum.photos/300/400" alt="img"></picture>
-        <picture><img src="https://picsum.photos/300/400" alt="img"></picture>
-        <picture><img src="https://picsum.photos/300/400" alt="img"></picture>
-    </main>
-    <script src="js/lazyloading.js"></script>
+    <h1>Progressive Loading (Images)</h1>
+    <picture>
+        <img src="https://via.placeholder.com/300x400" data-src="https://picsum.photos/id/237/300/400" alt="img">
+    </picture>
+    <picture>
+        <img src="https://via.placeholder.com/300x400" data-src="https://picsum.photos/id/237/300/400" alt="img">
+    </picture>
+    <picture>
+        <img src="https://via.placeholder.com/300x400" data-src="https://picsum.photos/id/237/300/400" alt="img">
+    </picture>
+    <picture>
+        <img src="https://via.placeholder.com/300x400" data-src="https://picsum.photos/id/237/300/400" alt="img">
+    </picture>
+    <picture>
+        <img src="https://via.placeholder.com/300x400" data-src="https://picsum.photos/id/237/300/400" alt="img">
+    </picture>
 
 </body>
 
