--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -12,7 +12,12 @@
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Sansita&family=Ubuntu&display=swap" rel="stylesheet">
+    <link rel="icon" href="images/2730327_colour_harry_hogwarts_house_potter_icon.png">
     <script src="js/lazyloading.js" defer></script>
+    <script src="js/script.js"></script>
 </head>
 <header id="discovery-header">
     <img class="logo-img" id="header-img" src="images/2730327_colour_harry_hogwarts_house_potter_icon.png" alt="logo">
@@ -29,7 +34,7 @@
         <ul id="primaryNav">
 
             <li>
-                <a class="active" href="#">Discover</a>
+                <a class="active" href="index.html">Home</a>
             </li>
             <li>
                 <a class="active" href="#">Directory</a>
@@ -44,12 +49,12 @@
         </ul>
         <ul class="icons">
             <li>
-                <a href="https://www.facebook.com/" target="_blank">
-                    <img id="facebook" src="images/" alt="facebook Icon"></a>
+                <a href="images/facebookIcon.png" target="_blank">
+                    <img id="facebook" src="images/facebookIcon.png" alt="facebook Icon"></a>
             </li>
             <li>
                 <a href="https://www.linkedin.com/in/nikkolet-ashby-418757161/" target="_blank">
-                    <img id="linkedin" src="images/facebook-icon.png" alt="LinkedIn Icon"></a>
+                    <img id="linkedin" src="images/linkedinIcon.png" alt="LinkedIn Icon"></a>
             </li>
         </ul>
 
