--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -62,34 +62,58 @@
     <p id="p-date"><span id="currentdate"></span></p>
 </header>
 
-<body class="discover-body">
-    <h1>Discover our locations!</h1>
-    <picture>
-        <h2>Owlery</h2>
-        <p>Our choice of owls cannot be beat and are perfect for emailing teachers, parents, and classmates.</p>
-        <img class="discover" src="https://via.placeholder.com/300x400" data-src="images/owlery.jpg" alt="Owlery">
-    </picture>
-    <picture>
-        <h2>Hogsmeade</h2>
-        <p>Variety of stores to gather supplies and goods. Must have permission from parents/guardian if under 18.</p>
-        <img class="discover" src="https://via.placeholder.com/300x400" data-src="images/hogsmeade.jpg" alt="Hogsmeade">
-    </picture>
-    <picture>
-        <h2>Chamber of Secrets</h2>
-        <p>Python languages classes held Wednesday nights at 7 pm.</p>
-        <img class="discover" src="https://via.placeholder.com/300x400" data-src="images/chamber-of-secrets.jpg" alt="Chamber of Secrets">
-    </picture>
-    <picture>
-        <h2>Room of Requirement</h2>
-        <p>This room can become anything you need. Dueling lessons will be given at 9 pm - 11 pm Tuesday evenings.</p>
-        <img class="discover" src="https://via.placeholder.com/300x400" data-src="images/room-of-requirement.jpg" alt="img">
-    </picture>
-    <picture>
-        <h2>Kitchens</h2>
-        <p>Learn to bake Dancing Flan and Scream Cheese Cake with Pitts the house helf. Classes will be on Fridays at 5:30 pm.</p>
-        <img class="discover" src="https://via.placeholder.com/300x400" data-src="images/hogwarts-kitchens.jpg" alt="img">
-    </picture>
+<body>
+    <div class="discover-body">
+        <h1>Discover our locations!</h1>
+        <picture>
+            <h2>Owlery</h2>
+            <p>Our choice of owls cannot be beat and are perfect for emailing teachers, parents, and classmates.</p>
+            <img class="discover" src="https://via.placeholder.com/300x400" data-src="images/owlery.jpg" alt="Owlery">
+        </picture>
+        <picture>
+            <h2>Hogsmeade</h2>
+            <p>Variety of stores to gather supplies and goods. Must have permission from parents/guardian if under 18.</p>
+            <img class="discover" src="https://via.placeholder.com/300x400" data-src="images/hogsmeade.jpg" alt="Hogsmeade">
+        </picture>
+        <picture>
+            <h2>Chamber of Secrets</h2>
+            <p>Python languages classes held Wednesday nights at 7 pm.</p>
+            <img class="discover" src="https://via.placeholder.com/300x400" data-src="images/chamber-of-secrets.jpg" alt="Chamber of Secrets">
+        </picture>
+        <picture>
+            <h2>Room of Requirement</h2>
+            <p>This room can become anything you need. Dueling lessons will be given at 9 pm - 11 pm Tuesday evenings.</p>
+            <img class="discover" src="https://via.placeholder.com/300x400" data-src="images/room-of-requirement.jpg" alt="img">
+        </picture>
+        <picture>
+            <h2>Kitchens</h2>
+            <p>Learn to bake Dancing Flan and Scream Cheese Cake with Pitts the house helf. Classes will be on Fridays at 5:30 pm.</p>
+            <img class="discover" src="https://via.placeholder.com/300x400" data-src="images/hogwarts-kitchens.jpg" alt="img">
+        </picture>
+    </div>
 
 </body>
+<footer>
+    <img class="logo-img footer-img" src="images/2730327_colour_harry_hogwarts_house_potter_icon.png" alt="logo">
+    <ul class="footer-company">
+        <li>
+            <h1>Learning Chamber of Commerce</h1>
+        </li>
+        <li>
+            <p>Salt Lake Chamber,<br> 201 S Main St #2300,
+                <br>Salt Lake City,<br>UT 84111</p>
+        </li>
+    </ul>
+    <ul class="contact">
+        <li>nikkoletashby@gmail.com</li>
+        <li>+1(801)231-3935</li>
+        <li class="map">
+            <a href="https://www.google.com/maps/place/Salt+Lake+Chamber/@40.7645262,-111.892769,17z/data=!3m2!4b1!5s0x87528a3aa97113a7:0xdb61b5943e1a7aa1!4m5!3m4!1s0x8752f513d6f6ab15:0x4be5eda424cce15a!8m2!3d40.7645222!4d-111.8905803"><img id="map" src="images/pin.png" alt="Location Map"></a>
+            <p>Map Location</p>
+        </li>
+    </ul>
+    <p class="js">
+        &copy;2022 | name of website | Nikkolet Ashby | WDD 230 Project | Last Updated: <span id="curdate"></span></p>
+</footer>
 
 </html>
