--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </li>
             <li>
                 <p>Lesson 07:</p>
-                <a href="#">The Discover Page - Image Section</a>
+                <a href="#">The Discover Page - Image Section</a><br>
                 <a href="lesson7/lazyloading.html">Activity: Progressive Loading of Images</a>
             </li>
             <li>
