--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
             </li>
             <li>
                 <p>Lesson 08:</p>
-                <a href="lesson_8.html">Join Page</a>
+                <a href="lesson_8.html">Join Page</a><br>
+                <a href="tableBuild.html">Activity: Table Build</a>
+
             </li>
             <li>
                 <p>Lesson 09:</p>
