--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
             </li>
             <li>
                 <p>Lesson 08:</p>
-                <a href="lesson_8.html">Join Page</a><br>
-                <a href="tableBuild.html">Activity: Table Build</a>
+                <a href="#">Join Page</a><br>
+                <a href="lesson8/tableBuild.html">Activity: Table Build</a>
 
             </li>
             <li>
