--- a/chamber/index.html
+++ b/chamber/index.html
@@ -51,11 +51,11 @@
         <ul class="icons">
             <li>
                 <a href="https://www.facebook.com/" target="_blank">
-                    <img id="facebook" src="images/" alt="facebook Icon"></a>
+                    <img id="facebook" src="images/facebook-icon.png" alt="facebook Icon"></a>
             </li>
             <li>
                 <a href="https://www.linkedin.com/in/nikkolet-ashby-418757161/" target="_blank">
-                    <img id="linkedin" src="images/facebook-icon.png" alt="LinkedIn Icon"></a>
+                    <img id="linkedin" src="images/3225190_app_linkedin_logo_media_popular_icon.png" alt="LinkedIn Icon"></a>
             </li>
         </ul>
 
@@ -131,21 +131,26 @@
             </div>
             <div class="weather">
                 <h2>Item 2: Weather</h2>
+                <img src="">
+
             </div>
         </div>
     </div>
+    <script src="js/script.js"></script>
+    <script src="js/windchill.js"></script>
 </body>
 <footer>
-    <img class="logo-img footer-img" src="images/2730327_colour_harry_hogwarts_house_potter_icon.png" alt="logo">
-    <ul class="footer-company">
-        <li>
-            <h1>Learning Chamber of Commerce</h1>
-        </li>
-        <li>
-            <p>Salt Lake Chamber,<br> 201 S Main St #2300,
-                <br>Salt Lake City,<br>UT 84111</p>
-        </li>
-    </ul>
+    <div class="logo-address">
+        <img class="logo-img footer-img" src="images/2730327_colour_harry_hogwarts_house_potter_icon.png" alt="logo">
+        <ul class="footer-company">
+            <li>
+                <h1>Learning Chamber of Commerce</h1>
+            </li>
+            <li>
+                <p>Salt Lake Chamber, 201 S Main St #2300,<br>Salt Lake City,UT 84111</p>
+            </li>
+        </ul>
+    </div>
     <ul class="contact">
         <li>nikkoletashby@gmail.com</li>
         <li>+1(801)231-3935</li>
@@ -156,8 +161,7 @@
     </ul>
     <p class="js">
         &copy;2022 | name of website | Nikkolet Ashby | WDD 230 Project | Last Updated: <span id="curdate"></span></p>
-    <script src="js/script.js"></script>
-    <script src="js/windchill.js"></script>
+
 </footer>
 
 </html>
