--- a/chamber/index.html
+++ b/chamber/index.html
@@ -35,13 +35,13 @@
         <ul id="primaryNav">
 
             <li>
-                <a class="active" href="#">Discover</a>
+                <a class="active" href="discover.html">Discover</a>
             </li>
             <li>
                 <a class="active" href="#">Directory</a>
             </li>
             <li>
-                <a class="active" href="#">Join</a>
+                <a class="active" href="../join/join.html">Join</a>
             </li>
             <li>
                 <a class="active" href="#">Contact</a>
