--- a/chamber/index.html
+++ b/chamber/index.html
@@ -72,23 +72,23 @@
         <div class="weather large-div">
             <h1 id="weather">Weather</h1>
             <p id="weather-info">
-                <img id="weather-pic" src="../images/weather.jpg" alt="Weather" />
+                <img id="weather-pic" src="images/669958_weather_cloud_forecast_sun_icon.png" alt="Weather" />
                 <form id="wind">
-                    <label for="Temp">Average Temperature:
-                <input id="Temp" type="number" name="Temp">
-                </label><br>
+                    <label for="temp">Avg Temp:
+                <input id="temp" type="number" name="Temp">
+                </label>
                     <label for="windSpeed">Wind Speed:
                 <input id="windSpeed" type="number" name="windSpeed">
                 </label><br>
                     <input id="button" type="button" value="Submit">
-                </form><br> Wind Chill: <span id="windChill"></span>&deg;f
+                </form><br> Wind Chill: <span id="windChill"></span>
             </p>
         </div>
         <div class="join">
 
-            <a href="#"></a><button class="button">Join Us!</button></a>
+            <a href="../join/join.html"></a><button class="button">Join Us!</button></a>
 
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum, dignissimos dicta voluptates omnis nam recusandae doloribus mollitia? Modi hic facere ullam a asperiores, vero nemo numquam praesentium, dolor ratione quisquam?</p>
+            <p>Discover how to join the magical world of Harry Potter and the Chamber of Commerece and how it will benefit your organization!</p>
         </div>
         <div class="hero">
             <h2>Item 4: Hero with Site Name and Call to Action</h2>
@@ -104,23 +104,37 @@
         </div>
         <div class="spotlight">
             <div id="spot1">
-                <h2>Spotlight 1</h2>
-                <img src="images/360_F_487009062_NZdRcz4Zjbqda8lVGEbdysGbGRvWrtge.jpg" alt="hogwarts train">
-                <p>We're here to get you at Platform 9 3/4</p>
+                <h2>Hogwarts Express</h2>
+                <img src="images/2730340_colour_express_harry_hogwarts_potter_icon.png" alt="hogwarts train">
+                <p>We're here to get you at Platform 9 3/4.</p>
+                <hr>
+                <p>hogwarts-express-transportation.com</p>
+                <p>+1(605)475-6961 | <a href="#">Website</a></p>
             </div>
             <div id="spot2">
-                <h2>Spotlight 2</h2>
+                <h2>Charms Club</h2>
 
-                <img src="images/4ghv5u3jpu.jpg" alt="howarts classroom">
-                <p>An after school transfiguration program.</p>
+                <img src="images/2730324_colour_feather_harry_potter_quill_icon.png" alt="feather">
+                <p>Professor Flitwick will be diving in deep into lesser known charms and techniques to hone your skills.</p>
+                <p>"Charms differ from Transfiguring Spells in the following manner: a charm adds certain properties to an object or creature, whereas a transfiguring spell will change it into something utterly different." — The Standard Book of Spells,
+                    Grade 1</p>
                 <hr>
-                <div class="spot2-contact">
-                    <p>minerva-mcgonagall@hogwarts-edu.com</p>
-                    <p></p>
-                </div>
+
+                <p>ffitwick@hogwartsstaff.org</p>
+                <p>+1(395)384-2794 | <a href="#">Website</a></p>
+
             </div>
             <div id="spot3">
-                <h2>Spotlight 3</h2>
+                <h2>Werewolf Awareness Wednesdays</h2>
+                <img src="images/2730322_colour_harry_potter_sirius_wolf_icon.png" alt="wolf howling at moon">
+                <p>Being a werewolf bites...But you are not alone.</p>
+                <p>If you or someone you love suffers from lycanthropy, please come and learn more.</p>
+                <p>Everyone deserves understanding, respect, and dignity.</p>
+                <hr>
+                <p>Professor R. J. Lupin will be promoting Werewolf Awareness to get rid of the stigma that surrounds it.</p>
+                <hr>
+                <p>rjlupin@hogwarts-staff.org</p>
+                <p>+1(801)239-5627 | <a href="#">Website</a></p>
             </div>
         </div>
 
@@ -131,7 +145,7 @@
             </div>
             <div class="weather">
                 <h2>Item 2: Weather</h2>
-                <img src="">
+                <img src="chamber/images/669958_weather_cloud_forecast_sun_icon.png">
 
             </div>
         </div>
@@ -160,7 +174,7 @@
         </li>
     </ul>
     <p class="js">
-        &copy;2022 | name of website | Nikkolet Ashby | WDD 230 Project | Last Updated: <span id="curdate"></span></p>
+        &copy;2022 | name of website | Nikkolet Ashby | WDD 230 Project | Last Updated: <span id="date"></span></p>
 
 </footer>
 
