--- a/join/join.html
+++ b/join/join.html
@@ -80,7 +80,7 @@
                 <label class="top">Title<input type="text" name="text" placeholder="Business Position"></label>
             </fieldset>
             <fieldset>
-                <legend>Membership Information</legend>
+                <legend>Choose A Membership</legend>
                 <label class="sbs" id="nonmember"><input type="radio" name="audience" value="NP Membership"> NP Membership</label>
                 <h2 class="sbsp">Fee</h2>
                 <p class="sbsp">Muggle: $0</p>
