--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -27,8 +27,6 @@
             <p>and the Chamber of Commerce</p>
         </li>
     </ul>
-
-
     <nav class="nav">
         <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
         <ul id="primaryNav">
@@ -40,7 +38,7 @@
                 <a class="active" href="#">Directory</a>
             </li>
             <li>
-                <a class="active" href="#">Join</a>
+                <a class="active" href="../join/join.html">Join</a>
             </li>
             <li>
                 <a class="active" href="#">Contact</a>
