--- a/lesson5/bom.html
+++ b/lesson5/bom.html
@@ -40,7 +40,7 @@
             </div>
         </section>
     </main>
-    <script src="js\script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
