--- a/chamber/index.html
+++ b/chamber/index.html
@@ -66,7 +66,11 @@
 <body>
     <div class="grid">
         <div class="event large-div">
-            <h2>Item 1: Event</h2>
+            <h2>Triwizard Tournament</h2>
+            <img src="images/2730338_colour_dragon_egg_harry_magic_icon.png" alt="Dragon Egg">
+            <p>The first task in the Triwizard Tournament is complete!<br> Now our contestants will have to figure out what the next task is. <a href="https://harrypotter.fandom.com/wiki/Golden_egg">more info...</a></p>
+
+
 
         </div>
         <div class="weather large-div">
@@ -91,16 +95,18 @@
             <p>Discover how to join the magical world of Harry Potter and the Chamber of Commerece and how it will benefit your organization!</p>
         </div>
         <div class="hero">
-            <h2>Item 4: Hero with Site Name and Call to Action</h2>
+            <h2 class="hero-text">Welcome to Hogwarts</h2>
             <img id="rexburg-img" src="images/wdd230-org.jpg" alt="Chamber of Commerce Homebase">
 
         </div>
         <div class="news">
-            <h2>Item 5: News Release</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro voluptas maxime, fuga ex sapiente repudiandae fugiat ullam consequuntur corporis repellendus dolor, eos illum non perspiciatis aliquid voluptatem commodi dicta consequatur? Magnam
-                earum voluptate tempore dolor quis perferendis accusantium nobis sequi asperiores, praesentium iure reiciendis fugit, doloribus nesciunt veniam, debitis voluptatum tenetur totam. Ipsum expedita sed saepe nulla libero, eum enim? Animi in
-                aperiam enim rem illo? Ratione rem voluptatibus repellendus quidem doloribus, excepturi quia ab beatae expedita eligendi odit eos quas, qui, officia dolorum suscipit ad nisi nesciunt inventore tempore!
-            </p>
+            <h2>The Daily Prophet</h2>
+            <h3>He-Who-Must-Not-Be-Named Returns!</h3>
+            <p>"He's back." <br>-Cornelius Fudge</p>
+            <p>In a brief statement Friday night, Minister for Magic Cornelius Fudge confirmed that He-Who-Must-Not-Be Named has returned to this country and is active once more. "It is with great regret that I must confirm that the wizard styling himself
+                Lord - well, you know who I mean - is alive and among us again," said Fudge, looking tired and flustered as he addressed reporters. "It is with almost equal regret that we report the mass revolt of the Dementors of Azkaban, who have shown
+                themselves averse to continuing in the Ministry's employ. We believe that the dementors are currently taking direction from Lord - Thingy. We urge the magical population to remain vigilant. The Ministry is currently publishing guides to
+                elementary home and personal defense that will be delivered free to all wizarding homes within the coming month."<br><a href="https://harry-potter-compendium.fandom.com/wiki/Daily_Prophet_articles#HE-WHO-MUST-NOT-BE-NAMED_RETURNS_(June_19,_1996)">read more...</a></p>
         </div>
         <div class="spotlight">
             <div id="spot1">
@@ -143,7 +149,7 @@
                 <h2>Item 1: Event</h2>
 
             </div>
-            <div class="weather">
+            <div class="weather-div">
                 <h2>Item 2: Weather</h2>
                 <img src="chamber/images/669958_weather_cloud_forecast_sun_icon.png">
 
