--- a/join/join.html
+++ b/join/join.html
@@ -98,6 +98,7 @@
                     <li>2 adds in The Quibbler</li>
                     <li>Subscription to The Daily Prophet</li>
                     <li>Subscription to The Quibbler</li>
+                    <li>Subscription to Witch Weekly</li>
                     <li>50% off all owl travel for first year.</li>
                 </ul>
                 <label class="sbs" id="bronze"><input type="radio" name="audience" value="Bronze"> Bronze</label>
@@ -115,7 +116,9 @@
                     </li>
                     <li>1 ads in The Daily Prophet</li>
                     <li>1 adds in The Quibbler</li>
+                    <li>20% off Subsciption to The Daily Prophet</li>
                     <li>50% off Subscription to The Quibbler</li>
+                    <li>Subscription to Witch Weekly</li>
                     <li>20% off all owl travel for first year.</li>
                 </ul>
                 <label class="sbs" id="silver"><input type="radio" name="audience" value="Silver"> Silver</label>
@@ -135,6 +138,7 @@
                     <li>1 adds in The Quibbler</li>
                     <li>50% off Subsciption to The Daily Prophet</li>
                     <li>Subscription to The Quibbler</li>
+                    <li>Subsciption to Witch Weekly</li>
                     <li>25% off all owl travel for first year.</li>
                 </ul>
                 <label class="sbs" id="gold"><input type="radio" name="audience" value="Gold"> Gold</label>
@@ -154,6 +158,7 @@
                     <li>2 adds in The Quibbler</li>
                     <li>Subscription to The Daily Prophet</li>
                     <li>Subscription to The Quibbler</li>
+                    <li>Subscription to Witch Weekly</li>
                     <li>50% off all owl travel for first year.</li>
                 </ul>
                 <input type="hidden" id="date" name="date" value="CurrentTime">
